@@ -4,7 +4,8 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added functionality wich allows using html tags as tooltip data.
+  [phgross]
 
 
 1.0.5 (2012-10-16)
